# Neural-Network-From-Scratch-Project

./: Cargo.toml  LICENSE  README.md
pkg/: package.json  simple_neural_network_project.d.ts  simple_neural_network_project.js  simple_neural_network_project_bg.wasm  simple_neural_network_project_bg.wasm.d.ts
src/: back.rs  backprop.rs  backpropagation.rs  layer.rs  lib.rs  main.rs  neural_network.rs  neuron.rs  traning_handeler.rs  util.rs  wrapper.rs
